--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body class="bg-gray-900 text-white font-sans">
-    <div class="container mx-auto px-6 py-8">
+    <div id="particles-js" class="fixed inset-0 z-0"></div>
+    <div class="container mx-auto px-6 py-8 relative z-10">
         <div class="grid md:grid-cols-2 gap-8">
             <!-- Columna Izquierda -->
             <div class="space-y-8">
@@ -19,9 +20,8 @@
                         <img src="images/foto.jpg" alt="Foto de perfil" class="w-full h-full object-cover">
                     </div>
                     <!-- Nombre y título -->
-                    <div class="relative flex-1">
-                        <div id="particles-js" class="absolute inset-0"></div>
-                        <div class="relative z-10">
+                    <div class="flex-1">
+                        <div>
                             <h1 class="neon-text text-4xl md:text-6xl font-bold mb-4">DANIEL AROCA ORTIZ</h1>
                             <p class="text-xl text-gray-300 neon-subtitle mb-4">Aprendiz SENA - Analisis y Desarrollador de Software</p>
                         </div>
@@ -102,7 +102,7 @@
                     </p>
                     <!-- Información de contacto -->
                     <div class="mt-4 bg-gray-900 p-4 rounded-xl">
-                        <h3 class="text-xl font-semibold text-pink-400 mb-2">📄 Información de contacto</h3>
+                        <h3 class="text-xl font-semibold text-white mb-2">📄 Información de contacto</h3>
                         <ul class="text-gray-300 space-y-1">
                             <li><strong>Documento:</strong> 1006995304</li>
                             <li><strong>Teléfono:</strong> <a href="https://wa.me/573185501688" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 text-cyan-400 hover:text-cyan-300 transition-colors">
