--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Aroca | Portafolio</title>
+    <title>Daniel Aroca Ortiz | Portafolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -23,14 +23,15 @@
                     <div class="flex-1">
                         <div>
                             <h1 class="neon-text text-4xl md:text-6xl font-bold mb-4">DANIEL AROCA ORTIZ</h1>
-                            <p class="text-xl text-gray-300 neon-subtitle mb-4">Aprendiz SENA - Analisis y Desarrollador de Software</p>
+                            <p class="text-xl text-white mb-2 neon-subtitle mb-4">Aprendiz SENA - Analisis y Desarrollador de Software</p>
+                            <p class="text">Apasionado por el desarrollo de software y siempre listo para enfrentar nuevos desafíos, busco oportunidades donde pueda aplicar y expandir mis conocimientos tanto en el robusto mundo del backend como en la atractiva interfaz del frontend. Estoy emocionado por sumergirme en proyectos innovadores.</p>
                         </div>
                     </div>
                 </div>
 
                 <!-- Educación -->
                 <div>
-                    <h2 class="text-3xl font-bold text-cyan-400 mb-4">🎓 Educación</h2>
+                    <h2 class="text-3xl font-bold text-cyan-400 mb-4"> <>Educación</h2>
                     <div class="bg-gray-800 p-6 rounded-xl space-y-3 text-gray-300">
                         <p><strong>SENA:</strong> Cursando Análisis y Desarrollo de Software</p>
                         <p><strong>Curso:</strong> Herramientas Ofimáticas (2012)</p>
@@ -40,7 +41,7 @@
 
                 <!-- Aptitudes -->
                 <div>
-                    <h2 class="text-3xl font-bold text-cyan-400 mb-4">🧠 Aptitudes</h2>
+                    <h2 class="text-3xl font-bold text-cyan-400 mb-4"> <>Aptitudes</h2>
                     <div class="bg-gray-800 p-6 rounded-xl text-gray-300">
                         <ul class="list-disc list-inside space-y-2">
                             <li>Control de versiones</li>
@@ -55,7 +56,7 @@
                 <!-- CV Section -->
                 <div>
                     <div class="bg-gray-800 p-6 rounded-xl">
-                        <h2 class="text-3xl font-bold text-cyan-400 mb-4">📄 Hoja de vida</h2>
+                        <h2 class="text-3xl font-bold text-cyan-400 mb-4"> <>Hoja de vida</h2>
                         <!-- Botón para abrir modal -->
                         <button onclick="openModal()" class="inline-flex items-center px-6 py-3 bg-cyan-500 hover:bg-cyan-600 text-white font-semibold rounded-full transition-all hover:-translate-y-1 hover:shadow-lg hover:shadow-cyan-500/50 w-full justify-center">
                             <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -93,7 +94,7 @@
             <div class="space-y-8">
                 <!-- Perfil Profesional -->
                 <div class="bg-gray-800 p-6 rounded-2xl shadow-lg">
-                    <h2 class="text-3xl font-bold text-cyan-400 mb-4">👤 Perfil Profesional</h2>
+                    <h2 class="text-3xl font-bold text-cyan-400 mb-4"> <>Perfil Profesional</h2>
                     <p class="text-gray-300 mb-3">
                         Actualmente curso el tecnólogo en análisis y desarrollo de software en el SENA. Desarrollo el proyecto AQUALAB, para el laboratorio de agua del SENA de Alto Cauca.
                     </p>
@@ -102,7 +103,7 @@
                     </p>
                     <!-- Información de contacto -->
                     <div class="mt-4 bg-gray-900 p-4 rounded-xl">
-                        <h3 class="text-xl font-semibold text-white mb-2">📄 Información de contacto</h3>
+                        <h3 class="text-xl font-semibold text-white mb-2">Información de contacto</h3>
                         <ul class="text-gray-300 space-y-1">
                             <li><strong>Documento:</strong> 1006995304</li>
                             <li><strong>Teléfono:</strong> <a href="https://wa.me/573185501688" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 text-cyan-400 hover:text-cyan-300 transition-colors">
@@ -119,7 +120,7 @@
 
                 <!-- Habilidades Técnicas -->
                 <div>
-                    <h2 class="text-3xl font-bold text-cyan-400 mb-4">💻 Habilidades Técnicas</h2>
+                    <h2 class="text-3xl font-bold text-cyan-400 mb-4"> <>Habilidades Técnicas</h2>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                         <!-- HTML -->
                         <div class="skill-card bg-gray-900 p-4 rounded border border-[#E44D26] hover:shadow-lg hover:shadow-[#E44D26]/20 transition-all hover-glow">
@@ -175,8 +176,8 @@
 
                 <!-- Proyecto Destacado -->
                 <div>
-                    <h2 class="text-3xl font-bold text-pink-400 mb-4">🚀 Proyecto Destacado</h2>
-                    <div class="bg-gray-800 p-6 rounded-xl text-gray-300">
+                    <h2 class="text-3xl font-bold text-white mb-2"> <>Proyecto Destacado</h2>
+                    <div class="bg-gray-800 p-6 rounded-xl text-white mb-2">
                         <h3 class="text-2xl font-semibold text-cyan-300 mb-2">AQUALAB</h3>
                         <p>Sistema de gestión de muestras de agua para laboratorios.</p>
                         <p class="mt-2"><strong>Tecnologías:</strong> Node.js, Express, MongoDB</p>
