--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body class="bg-gray-900 text-white font-sans">
     <div id="particles-js" class="fixed inset-0 z-0"></div>
-    <div class="container mx-auto px-6 py-8 relative z-10">
-        <div class="grid md:grid-cols-2 gap-8">
+    <div class="container mx-auto px-4 sm:px-6 py-4 sm:py-8 relative z-10">
+        <div class="grid md:grid-cols-2 gap-4 md:gap-8">
             <!-- Columna Izquierda -->
             <div class="space-y-8">
                 <!-- Nombre y Título con Foto -->
-                <div class="relative flex items-center gap-6">
+                <div class="relative flex flex-col md:flex-row items-center gap-6">
                     <!-- Foto de perfil -->
-                    <div class="w-40 h-48 overflow-hidden border-4 border-cyan-400 shadow-lg shadow-cyan-400/20 rounded-xl">
+                    <div class="w-32 md:w-40 h-40 md:h-48 overflow-hidden border-4 border-cyan-400 shadow-lg shadow-cyan-400/20 rounded-xl">
                         <img src="images/foto.jpg" alt="Foto de perfil" class="w-full h-full object-cover">
                     </div>
                     <!-- Nombre y título -->
-                    <div class="flex-1">
+                    <div class="flex-1 text-center md:text-left">
                         <div>
-                            <h1 class="neon-text text-4xl md:text-6xl font-bold mb-4">DANIEL AROCA ORTIZ</h1>
-                            <p class="text-xl text-white mb-2 neon-subtitle mb-4">Aprendiz SENA - Analisis y Desarrollador de Software</p>
-                            <p class="text">Apasionado por el desarrollo de software y siempre listo para enfrentar nuevos desafíos, busco oportunidades donde pueda aplicar y expandir mis conocimientos tanto en el robusto mundo del backend como en la atractiva interfaz del frontend.</p>
+                            <h1 class="neon-text text-3xl md:text-6xl font-bold mb-4">DANIEL AROCA ORTIZ</h1>
+                            <p class="text-lg md:text-xl text-white mb-2 neon-subtitle mb-4">Aprendiz SENA - Analisis y Desarrollador de Software</p>
+                            <p class="text-sm md:text-base">Apasionado por el desarrollo de software y siempre listo para enfrentar nuevos desafíos, busco oportunidades donde pueda aplicar y expandir mis conocimientos tanto en el robusto mundo del backend como en la atractiva interfaz del frontend.</p>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
                             </svg>
-                            Ver 
+                            Descargar HV 
                         </button>
                     </div>
                 </div>                    <!-- Modal para CV -->
@@ -120,8 +120,8 @@
 
                 <!-- Habilidades Técnicas -->
                 <div>
-                    <h2 class="text-3xl font-bold text-cyan-400 mb-4"> <>Habilidades Técnicas</h2>
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+                    <h2 class="text-2xl md:text-3xl font-bold text-cyan-400 mb-4"> <>Habilidades Técnicas</h2>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-3 md:gap-4">
                         <!-- HTML -->
                         <div class="skill-card bg-gray-900 p-4 rounded border border-[#E44D26] hover:shadow-lg hover:shadow-[#E44D26]/20 transition-all hover-glow">
                             <div class="flex items-center gap-2">
