--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div>
                             <h1 class="neon-text text-3xl md:text-6xl font-bold mb-4">DANIEL AROCA ORTIZ</h1>
                             <p class="text-lg md:text-xl text-white mb-2 neon-subtitle mb-4">Aprendiz SENA - Analisis y Desarrollador de Software</p>
-                            <p class="text-sm md:text-base">Apasionado por el desarrollo de software y siempre listo para enfrentar nuevos desafíos, busco oportunidades donde pueda aplicar y expandir mis conocimientos tanto en el robusto mundo del backend como en la atractiva interfaz del frontend.</p>
+                            <p class="text-sm md:text-base">Apasionado por el desarrollo de software y siempre listo para enfrentar nuevos desafíos, busco oportunidades donde pueda aplicar y expandir mis conocimientos tanto en el robusto mundo del backend como en la atractiva interfaz del frontend.<</p>
                         </div>
                     </div>
                 </div>
